--- a/TraversalCoreProject/Views/Shared/Components/_FeaturePartial/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_FeaturePartial/Default.cshtml
@@ -1,78 +1,39 @@
-﻿<div class="best-rooms py-5">
+﻿@model List<Feature>
+<div class="best-rooms py-5">
     <div class="container py-md-5">
         <div class="ban-content-inf row">
-            <div class="maghny-gd-1 col-lg-6">
-                <div class="maghny-grid">
-                    <figure class="effect-lily border-radius  m-0">
-                        <img class="img-fluid" src="/Traversal-Starter/assets/images/g10.jpg" alt="" />
+            <div class="maghny-gd-1 col-lg-6 d-flex flex-column">
+                <div class="maghny-grid mb-4">
+                    <figure class="effect-lily border-radius m-0">
+                        <img class="img-fluid" src="@Model.FirstOrDefault()?.Image" alt="" />
                         <figcaption>
                             <div>
-                                <h4>3Days, 4 Nights</h4>
-                                <p>From 1720$ </p>
+                                <h4>@Model.FirstOrDefault()?.Title</h4>
+                                <p>From @Model.FirstOrDefault()?.Description$</p>
                             </div>
-
                         </figcaption>
                     </figure>
                 </div>
             </div>
+       
             <div class="maghny-gd-1 col-lg-6 mt-lg-0 mt-4">
                 <div class="row">
-                    <div class="maghny-gd-1 col-6">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="/Traversal-Starter/assets/images/g9.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1220$ </p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
+                    @foreach (var item in Model.Skip(1).Take(4))
+                    {
+                        <div class="col-6 mb-4">
+                            <div class="maghny-grid">
+                                <figure class="effect-lily border-radius">
+                                    <img class="img-fluid" src="@item.Image" alt="" />
+                                    <figcaption>
+                                        <div>
+                                            <h4>@item.Title</h4>
+                                            <p>From @item.Description$</p>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </div>
                         </div>
-                    </div>
-                    <div class="maghny-gd-1 col-6">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="/Traversal-Starter/assets/images/g8.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1620$ </p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="maghny-gd-1 col-6 mt-4">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="/Traversal-Starter/assets/images/g7.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1820$ </p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="maghny-gd-1 col-6 mt-4">
-                        <div class="maghny-grid">
-                            <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="/Traversal-Starter/assets/images/g6.jpg" alt="" />
-                                <figcaption>
-                                    <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1520$ </p>
-                                    </div>
-
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
