--- a/TraversalCoreProject/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/TraversalCoreProject/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="d-lg-block d-none">
-                <a href="contact.html" class="btn btn-style btn-secondary">Rezervaston Yap</a>
+                <a href="contact.html" class="btn btn-style btn-secondary">Rezervasyon Yap</a>
             </div>
             <!-- toggle switch for light and dark theme -->
             <div class="mobile-position">
