added new enttity

--- a/TraversalCoreProject/Views/Destination/Index.cshtml
+++ b/TraversalCoreProject/Views/Destination/Index.cshtml
@@ -5,7 +5,6 @@
 }
 
 <body>
-    <!-- about breadcrumb -->
     <section class="w3l-about-breadcrumb text-left">
         <div class="breadcrumb-bg breadcrumb-bg-about py-sm-5 py-4">
             <div class="container">
@@ -17,8 +16,7 @@
             </div>
         </div>
     </section>
-    <!-- //about breadcrumb -->
-    <!--  Work gallery section -->
+
     <section class="grids-1 py-5">
         <div class="grids py-lg-5 py-md-4">
             <div class="container">
@@ -28,7 +26,7 @@
                     {
                         <div class="col-lg-4 col-md-4 col-6">
                             <div class="column">
-                                <a href="blog-single.html"><img src="@item.Image" alt="" class="img-fluid"></a>
+                                <a href="/Destination/DestinationDetails/@item.DestinationId"><img src="@item.Image" alt="" class="img-fluid"></a>
                                 <div class="info">
                                     <h4><a href="blog-single.html">@item.City</a></h4>
                                     <p>@item.DayNight </p>
@@ -45,4 +43,3 @@
         </div>
     </section>
 </body>
-
