--- a/TraversalCoreProject/Views/LayoutPartial/_FooterPartial.cshtml
+++ b/TraversalCoreProject/Views/LayoutPartial/_FooterPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<footer>
+﻿
+<footer>
     <!-- footer -->
     <section class="w3l-footer">
         <div class="w3l-footer-16-main py-5">
@@ -44,7 +45,7 @@
                             <h4>Son gelişmeler ve kampanyalardan haberdar olun.</h4>
                             <form action="#" class="subscribe" method="post">
                                 <input type="email" name="email" placeholder="Email Address" required="">
-                                <button type="submit">Abone Ol</button>
+                                <button type="submit">Go</button>
                             </form>
                             <p>En son haberlerimiz ve makalelerimiz için kaydolun. Size asla spam e-postalar göndermeyeceğiz.</p>
                         </div>
