created member/user layout partial and login operations

--- a/TraversalCoreProject/Views/MemberLayoutPartial/_HeadPartial.cshtml
+++ b/TraversalCoreProject/Views/MemberLayoutPartial/_HeadPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @*
-    Member Layout Head Partial
+    User/Member  Layout Head Partial
 *@
 
 <head>
@@ -17,8 +17,14 @@
     <link href="/soft-ui-dashboard/assets/css/nucleo-icons.css" rel="stylesheet" />
     <link href="/soft-ui-dashboard/assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    @* <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script> *@
     <link href="/soft-ui-dashboard/assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- CSS Files -->
     <link id="pagestyle" href="/soft-ui-dashboard/assets/css/soft-ui-dashboard.css?v=1.0.3" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
+ 
+
+
 </head>
