--- a/TraversalCoreProject/Areas/Member/Views/Destination/Index.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Destination/Index.cshtml
@@ -1,15 +1,14 @@
-﻿@model List<EntityLayer.Concrete.Destination>
+﻿@model List<Destination>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
-
+<div class="card-header bg-white">
+    <h3 class="mb-0 fw-bold text-primary">
+      Aktif Tur Rotalarımız
+    </h3>
+</div>
 <div class="card shadow-sm border-0 rounded-3">
-    <div class="card-header bg-white">
-        <h5 class="mb-0 fw-bold text-primary">
-            <i class="bi bi-list-task me-2"></i> Aktif Tur Rotalarımız
-        </h5>
-    </div>
     <div class="card-body p-0">
         <div class="table-responsive">
             <table class="table table-hover table-striped align-middle mb-0">
