--- a/TraversalCoreProject/Views/MemberLayoutPartial/_ScriptPartial.cshtml
+++ b/TraversalCoreProject/Views/MemberLayoutPartial/_ScriptPartial.cshtml
@@ -19,3 +19,4 @@
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
 <script src="~/soft-ui-dashboard/assets/js/soft-ui-dashboard.min.js?v=1.0.3"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
