--- a/TraversalCoreProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
@@ -24,7 +24,7 @@
         count++;
         <tr>
             <th>@count</th>
-            <td>@item.Destination</td>
+            <td>@item.Destination.City</td>
             <td>@item.NumberOfPeople</td>
             <td>@(((DateTime)item.ReservationDate).ToString("dd-MMM-yyyy"))</td>
             <td>@item.Status</td>
