--- a/TraversalCoreProject/Views/MemberLayoutPartial/_FooterPartial.cshtml
+++ b/TraversalCoreProject/Views/MemberLayoutPartial/_FooterPartial.cshtml
@@ -2,7 +2,7 @@
 @*
     User/Member Layout Footer Partial
 *@
-<footer class="footer pt-3  ">
+<footer class="footer pt-3 bg-white" style="position: fixed; bottom: 0; width: 100%; z-index: 100; ">
     <div class="container-fluid">
         <div class="row align-items-center justify-content-lg-between">
             <div class="col-lg-6 mb-lg-0 mb-4">
