--- a/TraversalCoreProject/Views/Shared/Components/_ProfileInformation/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_ProfileInformation/Default.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="card-body p-3">
             <p class="text-sm">
-                Hi, I’m Alec Thompson, Decisions: If you can’t decide, the answer is no. If two equally difficult paths, choose the one more painful in the short term (pain avoidance is creating an illusion of equality).
+                Rezervasyon üye paneline hoş geldiniz. Sol menüden geçmiş, aktif ve onay bekleyen rezervasyonlarınızı görüntüleyebilir, iletişim bilgilerinizi güncelleyebilirsiniz. Panel üzerinden rezervasyon durumlarınızı takip edebilir ve iletişim detaylarını kolayca yönetebilirsiniz.
             </p>
             <hr class="horizontal gray-light my-4">
             <ul class="list-group">
