--- a/TraversalCoreProject/Views/Comment/AddComment.cshtml
+++ b/TraversalCoreProject/Views/Comment/AddComment.cshtml
@@ -17,9 +17,9 @@
             <div class="form-group col-lg-6">
                 <input type="text" name="CommentUser" class="form-control" placeholder="Adınız Soyadınız*" required="">
             </div>
-          @*   <div class="form-group col-lg-6">
+            <div class="form-group col-lg-6">
                 <input type="text" name="DestinationId" class="form-control" placeholder="Destinasyon No*" required="">
-            </div> *@
+            </div>
         </div>
         <div class="submit text-right">
             <button class="btn btn-style btn-primary">Yorum Yap </button>
