--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutScriptComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutScriptComponent/Default.cshtml
@@ -11,9 +11,11 @@
 <script src="~/sneat-1.0.0/assets/vendor/js/menu.js"></script>
 <!-- endbuild -->
 <!-- Vendors JS -->
+<script src="~/sneat-1.0.0/assets/vendor/libs/apex-charts/apexcharts.js"></script>
 <!-- Main JS -->
 <script src="~/sneat-1.0.0/assets/js/main.js"></script>
 
+<script src="~/sneat-1.0.0/assets/js/dashboards-analytics.js"></script>
 <!-- Page JS -->
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
