--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -5,14 +5,14 @@
 
 <ul class="menu-inner py-1">
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Dashboard/Index" class="menu-link">
             <i class="menu-icon bi bi-speedometer2"></i>
             <div data-i18n="Analytics">Dashboard</div>
         </a>
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Destination/Index" class="menu-link">
             <i class="menu-icon bi bi-map"></i>
             <div data-i18n="Analytics">Rotalar</div>
         </a>
