--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -33,7 +33,7 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Comment/Index" class="menu-link">
             <i class="menu-icon bi bi-chat-dots"></i>
             <div data-i18n="Analytics">Yorumlar</div>
         </a>
