--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -19,7 +19,7 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/User/Index" class="menu-link">
             <i class="menu-icon bi bi-people"></i>
             <div data-i18n="Analytics">Misafirler</div>
         </a>
