--- a/TraversalCoreProject/Areas/Admin/Views/User/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/User/Index.cshtml
@@ -51,10 +51,7 @@
                             </td>
 
                             <td class="text-center">
-                                <a href="/Admin/User/DeleteUser/@item.Id"
-                                   class="btn btn-sm btn-outline-danger" title="Sil">
-                                    <i class="bi bi-trash"></i>
-                                </a>
+                                <button type="button" onclick="confirmDelete('/Admin/User/DeleteUser/@item.Id')" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                             </td>
 
                             <td class="text-center">
