--- a/TraversalCoreProject/Areas/Admin/Views/Destination/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Destination/Index.cshtml
@@ -46,14 +46,14 @@
                                 <i class="bi bi-cash-stack text-success me-1"></i>
                                 <span class="badge bg-success">@item.Price ₺</span>
                             </td>
+
                             <td class="text-center">
                                 <a href="/Destination/DestinationDetails/@item.DestinationId" class="btn btn-sm btn-outline-info">
                                     <i class="bi bi-eye"></i> Görüntüle
                                 </a>
+                            </td>
                             <td class="text-center">
-                                <a href="/Admin/Destination/DeleteDestination/@item.DestinationId" class="btn btn-sm btn-outline-danger" title="Sil">
-                                    <i class="bi bi-trash"></i>
-                                </a>
+                                <button type="button" onclick="confirmDelete('/Admin/Destination/DeleteDestination/@item.DestinationId')" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                             </td>
                             <td class="text-center">
                                 <a href="/Admin/Destination/UpdateDestination/@item.DestinationId" class="btn btn-sm btn-outline-primary" title="Güncelle">
