--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -47,7 +47,7 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Guide/Index" class="menu-link">
             <i class="menu-icon bi bi-person-badge"></i>
             <div data-i18n="Analytics">Rehberlerimiz</div>
         </a>
