--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutScriptComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutScriptComponent/Default.cshtml
@@ -7,20 +7,22 @@
 <script src="~/sneat-1.0.0/assets/vendor/libs/popper/popper.js"></script>
 <script src="~/sneat-1.0.0/assets/vendor/js/bootstrap.js"></script>
 <script src="~/sneat-1.0.0/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-
 <script src="~/sneat-1.0.0/assets/vendor/js/menu.js"></script>
-<!-- endbuild -->
+
 <!-- Vendors JS -->
 <script src="~/sneat-1.0.0/assets/vendor/libs/apex-charts/apexcharts.js"></script>
 <!-- Main JS -->
 <script src="~/sneat-1.0.0/assets/js/main.js"></script>
-
 <script src="~/sneat-1.0.0/assets/js/dashboards-analytics.js"></script>
-<!-- Page JS -->
-<!-- Place this tag in your head or just before your close body tag. -->
-<script async defer src="https://buttons.github.io/buttons.js"></script>
 
+<!-- SweetAlert -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!-- jQuery Validation -->
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+
+<script src="~/lib/jquery-validation/dist/localization/messages_tr.js"></script>
 
 <script>
     function confirmDelete(urlWithId) {
