--- a/TraversalCoreProject/Areas/Admin/Views/Guide/AddGuide.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Guide/AddGuide.cshtml
@@ -11,7 +11,7 @@
 </div>
 <form method="post">
     <div class="form-group">
-        @Html.Label("Gösel")
+        @Html.Label("Görsel")
         <input type="text" asp-for="Image" class="form-control" />
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
@@ -34,7 +34,7 @@
         @Html.Label("Instagram Url")
         <input type="text" asp-for="InstagramUrl" class="form-control" />
         <span asp-validation-for="InstagramUrl" class="text-danger"></span>
-       
     </div>
+    <br />
     <button class="btn btn-outline-primary">Oluştur</button>
 </form>
