--- a/TraversalCoreProject/Areas/Admin/Views/Guide/EditGuide.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Guide/EditGuide.cshtml
@@ -1,8 +1,43 @@
-﻿
+﻿@model Guide
 @{
     ViewData["Title"] = "EditGuide";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>EditGuide</h1>
+<div class="card-header bg-white">
+    <h3 class="mb-0 fw-bold text-primary">
+        Rehber Güncelleme Sayfası
+    </h3>
+</div>
+<form method="post">
+    <div class="form-group">
+        <input type="hidden" asp-for="GuideId" />
+        @Html.Label("Görsel")
+        <input type="text" asp-for="Image" class="form-control" />
+        <span asp-validation-for="Image" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        @Html.Label("Ad Soyad")
+        <input type="text" asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        @Html.Label("Açıklama")
+        <textarea cols="30" rows="5" asp-for="Description" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        @Html.Label("Twitter Url")
+        <input type="text" asp-for="XUrl" class="form-control" />
+        <span asp-validation-for="XUrl" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        @Html.Label("Instagram Url")
+        <input type="text" asp-for="InstagramUrl" class="form-control" />
+        <span asp-validation-for="InstagramUrl" class="text-danger"></span>
+    </div>
+    <br />
+    <button class="btn btn-outline-primary">Güncelle</button>
+</form>
+
 
