--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -54,6 +54,25 @@
     </li>
 
     <li class="menu-item">
+        <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <i class="menu-icon bi bi-bar-chart-line"></i>
+            <div data-i18n="Analytics">Raporlar</div>
+        </a>
+        <ul class="menu-sub">
+            <li class="menu-item">
+                <a href="/PDFReport/Index" class="menu-link">
+                    <div data-i18n="PDF">PDF Raporları</div>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="/Excel/Index" class="menu-link">
+                    <div data-i18n="Excel">Excel Raporları</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+
+    <li class="menu-item">
         <a href="#" class="menu-link">
             <i class="menu-icon bi bi-star-half"></i>
             <div data-i18n="Analytics">Öne Çıkanlar</div>
@@ -77,7 +96,7 @@
     <li class="menu-item">
         <a href="#" class="menu-link">
             <i class="menu-icon bi bi-envelope-plus"></i>
-            <div data-i18n="Analytics">Mail Listesi</div>
+            <div data-i18n="Analytics">Mail İşlemleri</div>
         </a>
     </li>
 
