--- a/TraversalCoreProject/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using TraversalCoreProject.Models
 @using TraversalCoreProject.Areas.Member.Models
 @using EntityLayer.Concrete
+@using DTOLayer.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
