--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -94,9 +94,9 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Mail/Index" class="menu-link">
             <i class="menu-icon bi bi-envelope-plus"></i>
-            <div data-i18n="Analytics">Mail İşlemleri</div>
+            <div data-i18n="Analytics">Mail Gönder</div>
         </a>
     </li>
 
