--- a/TraversalCoreProject/Areas/Admin/Views/Mail/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Mail/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model MailRequestDTO
+﻿@using DTOLayer.DTOs.MailDTOs
+@model MailRequestDTO
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
