--- a/TraversalCoreProject/Areas/Admin/Views/Guide/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Guide/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Guide>
+﻿
+@model List<GuideDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
