--- a/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Destination
+﻿@model DestinationDto
 @{
     ViewData["Title"] = "DestinationDetails";
     Layout = "~/Views/Shared/_UILayout.cshtml";
