--- a/TraversalCoreProject/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using TraversalCoreProject.Areas.Member.Models
 @using EntityLayer.Concrete
 @using DTOLayer.DTOs
+@using DTOLayer.DTOs.DestinationDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
