--- a/TraversalCoreProject/Areas/Admin/Views/Comment/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Comment/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Comment>
+﻿@model List<CommentDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -40,7 +40,7 @@
 
                             <td class="text-center">
                                 <i class="bi bi-geo-alt text-primary me-1"></i>
-                                @item.Destination.City
+                                @item.DestinationCity
                             </td>
 
                             <td class="text-center">
