--- a/TraversalCoreProject/Areas/Admin/Views/Destination/UpdateDestination.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Destination/UpdateDestination.cshtml
@@ -1,4 +1,4 @@
-﻿@model Destination
+﻿@model DestinationDto
 @{
     ViewData["Title"] = "UpdateDestination";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
