--- a/TraversalCoreProject/Areas/Admin/Views/User/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<AppUser>
+﻿
+@model List<AppUserDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
