--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,9 @@
 ﻿@using TraversalCoreProject
 @using TraversalCoreProject.Areas.Member.Models
 @using EntityLayer.Concrete
-@using DTOLayer.DTOs
+@using DTOLayer.DTOs.CommentDTOs
+@using DTOLayer.DTOs.DestinationDTOs
+@using DTOLayer.DTOs.AppUserDTOs
+@using DTOLayer.DTOs.GuideDTOs
+@using DTOLayer.DTOs.ContactUsDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
