--- a/TraversalCoreProject/Areas/Member/Views/Dashboard/Index.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Dashboard/Index.cshtml
@@ -35,7 +35,7 @@
                             @ViewBag.userName
                         </h5>
                         <p class="mb-0 font-weight-bold text-sm">
-                            Traversal | Gold Üye
+                            Traversal | Star Üye
                         </p>
                     </div>
                 </div>
