--- a/TraversalCoreProject/Areas/Member/Views/Destination/Index.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Destination/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Destination>
+﻿
+@model List<DestinationDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
