--- a/TraversalCoreProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Reservation/MyApprovalReservation.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Reservation>
+﻿@model List<ReservationDto>
 @{
     ViewData["Title"] = "MyApprovalReservation";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
@@ -29,7 +29,7 @@ else
             count++;
             <tr>
                 <th>@count</th>
-                <td>@item.Destination.City</td>
+                <td>@item.DestinationCity</td>
                 <td>@item.NumberOfPeople</td>
                 <td>@(((DateTime)item.ReservationDate).ToString("dd-MMM-yyyy"))</td>
                 <td>@item.Status</td>
