--- a/TraversalCoreProject/Areas/Member/Views/Reservation/NewReservation.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Reservation/NewReservation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Reservation
+﻿@model ReservationDto
 @{
     ViewData["Title"] = "NewReservation";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
@@ -12,7 +12,7 @@
 <form method="post">
     <div class="form-group">
         @Html.Label("Lokasyon")
-        @Html.DropDownListFor(x => x.Destination, (List<SelectListItem>)ViewBag.List, new { @class = "form-control" })
+        @Html.DropDownListFor(x => x.DestinationId, (List<SelectListItem>)ViewBag.List, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.Label("Kişi Sayısı")
