--- a/TraversalCoreProject/Areas/Member/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using TraversalCoreProject
 @using TraversalCoreProject.Areas.Member.Models
 @using EntityLayer.Concrete
+@using DTOLayer.DTOs.DestinationDTOs
+@using DTOLayer.DTOs.ReservationDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
