--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -40,7 +40,7 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/ContactUs/Index" class="menu-link">
             <i class="menu-icon bi bi-envelope-paper"></i>
             <div data-i18n="Analytics">Mesajlar</div>
         </a>
