--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using DTOLayer.DTOs.AppUserDTOs
 @using DTOLayer.DTOs.GuideDTOs
 @using DTOLayer.DTOs.ContactUsDTOs
+@using DTOLayer.DTOs.AnnouncementDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
