added api consume with cors

--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using DTOLayer.DTOs.GuideDTOs
 @using DTOLayer.DTOs.ContactUsDTOs
 @using DTOLayer.DTOs.AnnouncementDTOs
+@using TraversalCoreProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
