added CQRS and mediatR pattern

--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -8,4 +8,6 @@
 @using DTOLayer.DTOs.ContactUsDTOs
 @using DTOLayer.DTOs.AnnouncementDTOs
 @using TraversalCoreProject.Models
+@using TraversalCoreProject.CQRS.Results.DestinationResult
+@using TraversalCoreProject.CQRS.Commands.DestinationCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
