--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -10,4 +10,6 @@
 @using TraversalCoreProject.Models
 @using TraversalCoreProject.CQRS.Results.DestinationResult
 @using TraversalCoreProject.CQRS.Commands.DestinationCommands
+@using TraversalCoreProject.CQRS.Results.GuideResults
+@using TraversalCoreProject.CQRS.Commands.GuideCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
