--- a/TraversalCoreProject/Views/LayoutPartial/_ScriptPartial.cshtml
+++ b/TraversalCoreProject/Views/LayoutPartial/_ScriptPartial.cshtml
@@ -1,14 +1,13 @@
-﻿ <!-- Template JavaScript -->
-<script src="~/Traversal-Liberty/assets/js/jquery-3.3.1.min.js"></script>
-<script src="~/Traversal-Liberty/assets/js/theme-change.js"></script>
-<!-- stats number counter-->
-<script src="~/Traversal-Liberty/assets/js/jquery.waypoints.min.js"></script>
-<script src="~/Traversal-Liberty/assets/js/jquery.countup.js"></script>
-<script>
-    $('.counter').countUp();
-</script>
-<!-- //stats number counter -->
-<!--/MENU-JS-->
+﻿﻿<script src="~/Traversal-Starter/assets/js/jquery-3.3.1.min.js"></script>
+<script src="~/Traversal-Starter/assets/js/theme-change.js"></script>
+<!--/slider-js-->
+<script src="~/Traversal-Starter/assets/js/jquery.min.js"></script>
+<script src="~/Traversal-Starter/assets/js/modernizr-2.6.2.min.js"></script>
+<script src="~/Traversal-Starter/assets/js/jquery.zoomslider.min.js"></script>
+<!--//slider-js-->
+<script src="~/Traversal-Starter/assets/js/owl.carousel.js"></script>
+<script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
+
 <script>
     $(window).on("scroll", function () {
       var scroll = $(window).scrollTop();
@@ -35,6 +34,3 @@
       });
     });
 </script>
-<!--//MENU-JS-->
-
-<script src="~/Traversal-Liberty/assets/js/bootstrap.min.js"></script>
