--- a/TraversalCoreProject/Views/Shared/Components/_TestimanialPartial/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_TestimanialPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Testimonial>
+﻿
+@model List<TestimonialDto>
 <section class="w3l-clients" id="clients">
     <!-- /grids -->
     <div class="cusrtomer-layout py-5">
