--- a/TraversalCoreProject/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Views/_ViewImports.cshtml
@@ -4,4 +4,7 @@
 @using EntityLayer.Concrete
 @using DTOLayer.DTOs
 @using DTOLayer.DTOs.DestinationDTOs
+@using DTOLayer.DTOs.FeatureDTOs
+@using DTOLayer.DTOs.SubAboutDTOs
+@using DTOLayer.DTOs.TestimanialDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
