--- a/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/_ViewImports.cshtml
@@ -12,4 +12,5 @@
 @using TraversalCoreProject.CQRS.Commands.DestinationCommands
 @using TraversalCoreProject.CQRS.Results.GuideResults
 @using TraversalCoreProject.CQRS.Commands.GuideCommands
+@using DTOLayer.DTOs.AccountDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
