--- a/TraversalCoreProject/Views/Shared/Components/_FeaturePartial/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_FeaturePartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<Feature>
+﻿
+@model List<FeatureDto>
 <div class="best-rooms py-5">
     <div class="container py-md-5">
         <div class="ban-content-inf row">
