--- a/TraversalCoreProject/Views/Shared/Components/_SubAboutPartial/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_SubAboutPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<SubAbout>
+﻿
+@model List<SubAboutDto>
 <section class="w3l-bottom py-5">
     <div class="container py-md-4 py-3 text-center">
         <div class="row my-lg-4 mt-4">
