--- a/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
@@ -22,8 +22,8 @@
     <div class="py-5 w3l-homeblock1 text-center">
         <div class="container mt-md-3">
             <h3 class="blog-desc-big text-center mb-4">
-                Your Blog Posts are Boring? Here are 9 Tips for
-                Making your Writing more Interesting
+                Alanında en yetkin rehberlerimizle
+                en güncel seyahat hikayelerimizi okumalısınız!
             </h3>
             <div class="blog-post-align">
                 <div class="blog-post-img">
@@ -61,32 +61,30 @@
                         <blockquote class="blockquote my-5">
                             <div class="icon-quote"><span class="fa fa-quote-left" aria-hidden="true"></span></div>
                             Turizm Yolculuk Kültür Gezegen Rota
-                            <footer class="blockquote-footer mt-3">
-                                Smith lara
-                            </footer>
                         </blockquote>
                         <div class="sing-post-thumb mb-5 row pt-3">
                             <div class="col-sm-6">
-                                <a href="#url"><img src="~/Traversal-Liberty/assets/images/g8.jpg" class="img-fluid radius-image" alt=""></a>
+                                <a href="#url"><img src="@Model.CoverImage" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
                             </div>
                             <div class="col-sm-6 mt-sm-0 mt-3">
-                                <a href="#url"><img src="~/Traversal-Liberty/assets/images/g9.jpg" class="img-fluid radius-image" alt=""></a>
+                                <a href="#url"><img src="@Model.Image2" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
                             </div>
                         </div>
-                        <h3 class="blog-desc-big m-0 mb-lg-4 mb-3">2.Paragraf</h3>
                     <p class="mb-4">
                         @Model.Details2
                     </p>
                     <div class="d-grid left-right mt-5 pb-md-5">
                         <div class="buttons-singles tags">
-                            <h4>Tags :</h4>
-                            <a href="#blog-tag">Travel</a>
-                            <a href="#blog-tag">Culture</a>
+                            <h4>Etiketler :</h4>
+                            <a href="#blog-tag">Seyahat</a>
+                            <a href="#blog-tag">Gezi</a>
                             <a href="#blog-tag">Hotel</a>
-                            <a href="#blog-tag">Food</a>
+                            <a href="#blog-tag">Yemek</a>
+                            <a href="#blog-tag">Tur</a>
+                            <a href="#blog-tag">Dünya</a>
                         </div>
                         <div class="buttons-singles">
-                            <h4>Share :</h4>
+                            <h4>Paylaş :</h4>
                             <a href="#blog-share"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                             <a href="#blog-share"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                             <a href="#blog-share"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
