--- a/TraversalCoreProject/Views/LayoutPartial/_FooterPartial.cshtml
+++ b/TraversalCoreProject/Views/LayoutPartial/_FooterPartial.cshtml
@@ -44,8 +44,8 @@
                         <div class="end-column">
                             <h4>Son gelişmeler ve kampanyalardan haberdar olun.</h4>
                             <form action="#" class="subscribe" method="post">
-                                <input type="email" name="email" placeholder="Email Address" required="">
-                                <button type="submit">Go</button>
+                                <input type="email" name="email" placeholder="Email Adresiniz" required="">
+                                <button type="submit">Kayıt Ol</button>
                             </form>
                             <p>En son haberlerimiz ve makalelerimiz için kaydolun. Size asla spam e-postalar göndermeyeceğiz.</p>
                         </div>
