added update entities nullable status

--- a/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
@@ -149,7 +149,7 @@
                     </div>
                     @await Component.InvokeAsync("_CommentList", new { id = ViewBag.i })
 
-                    @await Html.PartialAsync("~/Views/Comment/AddComment.cshtml")
+                    @await Html.PartialAsync("~/Views/Comment/AddComment.cshtml", new { id = ViewBag.destID })
 
                 </div>
             </div>
