--- a/TraversalCoreProject/Views/Comment/AddComment.cshtml
+++ b/TraversalCoreProject/Views/Comment/AddComment.cshtml
@@ -1,30 +1,29 @@
-﻿@model DestinationDto
+﻿
 @*
     Add Comment Component
 *@
-<div class="leave-comment-form mt-5" id="reply">
-    <h4 class="side-title mb-2">Bizi yorumlayın</h4>
-    <p class="mb-4">
-        Lütfen ilgili alanları doldurunuz *
-    </p>
-    <form method="post" asp-action="AddComment" asp-controller="Comment">
-        <input type="hidden" name="DestinationId" value="@ViewBag.i" placeholder="DestinationId" required="" />
-        <div class="form-group">
-            <textarea name="CommentContent" class="form-control" placeholder="Yorumunuz*" required="" spellcheck="false"></textarea>
-        </div>
-        <div class="input-grids row">
-
-            <div class="form-group col-lg-6">
-                <input type="text" name="CommentUser" class="form-control" placeholder="Adınız Soyadınız*" required="">
+﻿@if (User.Identity.IsAuthenticated)
+{
+    <div class="leave-comment-form mt-5" id="reply">
+        <h4 class="side-title mb-2">Bizi yorumlayın</h4>
+        <p class="mb-4">
+            Lütfen ilgili alanları doldurunuz *
+        </p>
+        <form method="post" asp-action="AddComment" asp-controller="Comment">
+            <input type="hidden" name="DestinationId" value="@ViewBag.destId" />
+            <input type="hidden" name="AppUserId" value="@ViewBag.userId" />
+            <div class="form-group">
+                <textarea name="CommentContent" class="form-control" placeholder="Yorumunuz*" required="" spellcheck="false"></textarea>
             </div>
-            <div class="form-group col-lg-6">
-                <input type="text" name="DestinationId" class="form-control" placeholder="Destinasyon No*" required="">
+            <div class="submit text-right">
+                <button class="btn btn-style btn-primary">Yorum Yap </button>
             </div>
-        </div>
-        <div class="submit text-right">
-            <button class="btn btn-style btn-primary">Yorum Yap </button>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
+}
+else
+{
+      <h2>Yorum yapabilmek için üye olmanız gereklidir.</h2>
+}
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
