added guide to destinati,on relation

--- a/TraversalCoreProject/Areas/Admin/Views/User/ReservationUser.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/User/ReservationUser.cshtml
@@ -36,11 +36,11 @@
                             </td>
                             <td class="text-start">
                                 <i class="bi bi-people text-primary me-1"></i>
-                                @item.AppUserFullName
+                                @item.AppUser.Name @item.AppUser.SurName
                             </td>
                             <td class="text-center">
                                 <i class="bi bi-geo-alt text-danger me-1"></i>
-                                @item.DestinationCity
+                                @item.Destination.City
                             </td>
                             <td class="text-center">
                                 <i class="bi bi-people text-primary me-1"></i>
