--- a/TraversalCoreProject/Areas/Admin/Views/Comment/Index.cshtml
+++ b/TraversalCoreProject/Areas/Admin/Views/Comment/Index.cshtml
@@ -40,7 +40,7 @@
 
                             <td class="text-center">
                                 <i class="bi bi-geo-alt text-primary me-1"></i>
-                                @item.DestinationCity
+                                @item.Destination.City
                             </td>
 
                             <td class="text-center">
