--- a/TraversalCoreProject/Areas/Member/Views/Reservation/MyCurrentReservation.cshtml
+++ b/TraversalCoreProject/Areas/Member/Views/Reservation/MyCurrentReservation.cshtml
@@ -28,7 +28,7 @@ else
             count++;
             <tr>
                 <th>@count</th>
-                <td>@item.DestinationCity</td>
+                <td>@item.Destination.City</td>
                 <td>@item.NumberOfPeople</td>
                 <td>@(((DateTime)item.ReservationDate).ToString("dd-MMM-yyyy"))</td>
                 <td>@item.Status</td>
