--- a/TraversalCoreProject/Views/Shared/Components/_CommentList/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_CommentList/Default.cshtml
@@ -15,7 +15,7 @@
 
                 <ul class="time-rply mb-2">
                     <li>
-                        <a href="#URL" class="name mt-0 mb-2 d-block">@item.AppUserFullName</a>
+                        <a href="#URL" class="name mt-0 mb-2 d-block">@item.AppUser.Name @item.AppUser.SurName</a>
                         @(((DateTime)item.CommentDate).ToString("dd-MM-yyy"))
 
                     </li>
