--- a/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalCoreProject/Views/Destination/DestinationDetails.cshtml
@@ -27,18 +27,15 @@
             </h3>
             <div class="blog-post-align">
                 <div class="blog-post-img">
-                    <a href="#"><img src="~/Traversal-Liberty/assets/images/c1.jpg" alt="" class="rounded-circle img-fluid" /></a>
+                    <a href="#"><img src="@Model.Guide.Image" alt="" class="rounded-circle img-fluid" /></a>
                 </div>
                 <div class="blog-post-info">
                     <div class="author align-items-center mb-1">
-                        <a href="#">Johnson smith</a> in <a href="#url">Traversal</a>
+                        <a href="#">@Model.Guide.Name</a> - <a href="#url">@Model.Guide.Description</a>
                     </div>
                     <ul class="blog-meta">
                         <li class="meta-item blog-lesson">
-                            <span class="meta-value"> June 13, 2020 </span>
-                        </li>
-                        <li class="meta-item blog-students">
-                            <span class="meta-value"> 6min read</span>
+                            <span class="meta-value"> @Model.Date.ToString("dd.MM.yyyy")</span>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +48,7 @@
             <div class="container pb-lg-4">
                 <div class="single-post-image">
                     <div class="post-content">
-                        <img src="~/Traversal-Liberty/assets/images/banner2.jpg" class="radius-image img-fluid mb-5" alt="" />
+                        <img src="@Model.CoverImage" style="width:1170px;height:500px" class="radius-image img-fluid mb-5" alt="" />
                     </div>
                 </div>
                 <div class="single-post-content">
@@ -64,7 +61,7 @@
                         </blockquote>
                         <div class="sing-post-thumb mb-5 row pt-3">
                             <div class="col-sm-6">
-                                <a href="#url"><img src="@Model.CoverImage" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
+                                <a href="#url"><img src="@Model.Image" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
                             </div>
                             <div class="col-sm-6 mt-sm-0 mt-3">
                                 <a href="#url"><img src="@Model.Image2" style="width:400px; height:400px;" class="img-fluid radius-image" alt=""></a>
@@ -97,14 +94,13 @@
                         <div class="row align-items-center">
                             <div class="col-sm-3 col-6">
                                 <div>
-                                    <img src="~/Traversal-Liberty/assets/images/c3.jpg" alt="" class="rounded-circle img-fluid">
+                                    <img src="@Model.Guide.Image" alt="" class="rounded-circle img-fluid">
                                 </div>
                             </div>
                             <div class="col-sm-9 mt-sm-0 mt-3">
-                                <h3 class="mb-3 title">Alexander Ronald</h3>
+                                <h3 class="mb-3 title">@Model.Guide.Name</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, sed et excepturi.
-                                    Distinctio fugit odit? Fugit ipsam. Lorem ipsum dolor sit.
+                                    @Model.Guide.Description2
                                 </p>
                                 <ul class="author-icons mt-4">
                                     <li>
